Hook up REWRITE_FLOAT_UNARY_MINUS_OPERATOR workaround in ANGLE

ANGLE CL is at: https://chromium-review.googlesource.com/#/c/417169.

BUG=672380
TEST=conformance/glsl/bugs/unary-minus-operator-float-bug.html
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel;master.tryserver.chromium.android:android_optional_gpu_tests_rel

Review-Url: https://codereview.chromium.org/2567983002
Cr-Commit-Position: refs/heads/master@{#438287}

Former-commit-id: cc07fe9671a50758809aef07cb7fdbc7ca7c4e3f